--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -1,93 +1,68 @@
 #+title: Emacs Configuration
 #+author: Hristo Filaretov
+
 * Preamble
-Most of this is based on Harry Schwartz's [[https://github.com/hrs/dotfiles/blob/master/emacs/.hgf-emacs-path/configuration.org][configuration]] and is also inspired by
-many his talks and blog posts.
+There are a bunch of people I've shamelessly stolen from. The ideas and pieces
+of code are scattered in this file with no direct citations. This isn't a paper.
+Here's an incomplete list, in no particular order:
+
+- [[https://github.com/hrs/dotfiles][Harry Schwartz]]. I've taken lots of stuff from him.
+- [[https://so.nwalsh.com/2020/02/29/dot-emacs][Norman Walsh]]. I stole most of the startup tricks, tangling the files and many
+  other things directly from him.
 
 I assume that =use-package= and =general= are always available and sprinkle their
 incantations generously throughout the configuration.
 
-I tried using =straight=, but I wound up having some trouble with =org-mode=, and
-although I think it was documented somewhere, I'm more than happy with the
-regular =package=.
+* Early init
+:PROPERTIES:
+:header-args: :noweb-ref early-init
+:END:
+Some settings to reduce startup time and possibly make Emacs flicker less when
+reading the configuration files.
 
-* =use-package=
-I use =use-package= for packaging my used packages.
-
+** Increase GC cap
 #+begin_src emacs-lisp
-(use-package use-package
-  :config
-  (setq use-package-always-ensure t))
+(setq gc-cons-threshold 100000000)
 #+end_src
 
-* =general=
-I use =general= for my keybindings. It's generally quite good. The keybindings
-themselves will be found throughout this file.
+** Disable filename handlers
 
 #+begin_src emacs-lisp
-(use-package general
-  :config
-  (general-evil-setup)
-
-  (global-set-key [remap dabbrev-expand] 'hippie-expand)
-
-  (general-create-definer hgf-leader-def
-    :keymaps '(normal visual)
-    :prefix "SPC")
-
-
-  (general-create-definer hgf-c-def
-    :prefix "C-c"))
+(defvar file-name-handler-alist-original file-name-handler-alist)
+(setq file-name-handler-alist nil)
 #+end_src
 
-* Compile
-I mostly use compilation with Latex, surprisingly enough.
-
+** Disable GUI elements
 #+begin_src emacs-lisp
-(defun hgf--close-compilation-if-successful (buf str)
-  "Close the compilation window if it is successful."
-  (if (null (string-match ".*exited abnormally.*" str))
-      ;;no errors, make the compilation window go away in a few seconds
-      (progn
-	(run-at-time
-	 "1 sec" nil 'kill-buffer
-	 (get-buffer-create "*compilation*"))
-	(message "No Compilation Errors!"))))
-
-(use-package compile
-  :ensure nil
-  :config
-  (general-nmap "C-x c" 'recompile)
-  (add-hook 'compilation-finish-functions
-  'hgf--close-compilation-if-successful))
+(push '(menu-bar-lines . 0) default-frame-alist)
+(push '(tool-bar-lines . 0) default-frame-alist)
+(push '(vertical-scroll-bars) default-frame-alist)
 #+end_src
 
-* Files
-
+** Load fonts
 #+begin_src emacs-lisp
-(use-package files
-  :ensure nil
-  :config (general-def "C-s" 'save-buffer))
+(set-face-attribute 'default nil :family "Iosevka" :height 110)
+(set-face-attribute 'fixed-pitch nil :family "Iosevka" :height 110)
 #+end_src
 
-* Imenu
-
+* Prelude
+:PROPERTIES:
+:header-args: :noweb-ref config-prelude
+:END:
+  
+** Constants
 #+begin_src emacs-lisp
-(use-package imenu
-  :ensure nil
-  :config
-  (general-nmap "M-i" 'imenu))
+(defconst *sys/linux*
+  (eq system-type 'gnu/linux))
+
+(defconst *sys/windows*
+  (eq system-type 'windows-nt))
+
+(defconst *sys/mac*
+  (eq system-type 'darwin))
 #+end_src
 
-* Flycheck
-
-#+begin_src emacs-lisp
-(use-package flycheck)
-#+end_src
-
-* Common paths
-Building common paths.
-
+** Functions
 #+begin_src emacs-lisp
 (defun hgf-emacs-path (filename)
   "Return the file path of FILENAME relative to the Emacs directory."
@@ -98,12 +73,9 @@ Building common paths.
   (format "%s%s" "~/cloud/journal/" filename))
 #+end_src
 
-* Macros
-I only have a single macro defined. And it probably exists in the standard
-library, or a commonly used package. And yet here we are.
-
+** Macros
 #+begin_src emacs-lisp
-(defmacro ~> (init &rest lst)
+(defmacro pipe (init &rest lst)
   "Pipe INIT through LST.
 
 Evaluate transformation pipeline LST. Either append argument at
@@ -134,120 +106,253 @@ Example:
 	      (append el `(,acc))))
 	  lst
 	  :initial-value init))
-#+end_src
-
-* Add =resources= to =load-path=
-#+begin_src emacs-lisp
 (add-to-list 'load-path (hgf-emacs-path "resources"))
 #+end_src
 
-* Personal information
-Just letting Emacs know who I am.
+* Configure Emacs defaults
+:PROPERTIES:
+:header-args: :noweb-ref config-emacs-defaults
+:END:
+All kinds of Emacs things that just don't sit right with me.
+
+** Set theme
+#+begin_src emacs-lisp
+(setq custom-theme-directory (hgf-emacs-path "themes/"))
+(if (package-installed-p 'autothemer)
+    (load-theme 'weatherwax t))
+#+end_src
+
+** Garbage collection
+Thanks, Norman Walsh!
+
+#+begin_src emacs-lisp
+(defvar hgf-gc-cons-threshold 67108864 ; 64mb
+  "The default value to use for `gc-cons-threshold'.
+If you experience freezing, decrease this. If you experience stuttering, increase this.")
+
+(add-hook 'emacs-startup-hook
+          (lambda ()
+            (setq gc-cons-threshold hgf-gc-cons-threshold)
+            (setq file-name-handler-alist file-name-handler-alist-original)
+            (makunbound 'file-name-handler-alist-original)))
+#+end_src
+
+** Personal information
+Letting Emacs know who I am.
 
 #+begin_src emacs-lisp
 (setq user-full-name "Hristo Filaretov"
       user-mail-address "h.filaretov@campus.tu-berlin.de")
 #+end_src
 
-* Faces
-Depending on the operating system, there are a few options.
+** Load path
+Adding some local resources.
 
 #+begin_src emacs-lisp
-(defun hgf--set-font ()
-  "Set a font depending on the OS."
-  (cond ((eq system-type 'windows-nt)
-	 (set-face-attribute 'default nil
-			     :family "Consolas"
-			     :height 110))
-	((eq system-type 'darwin)
-	 (set-face-attribute 'default nil
-			     :family "Source Code Pro"
-			     :height 120
-			     :weight 'semi-bold))
-	(t ;; t for true operating system
-	 (progn
-	   (set-face-attribute 'default nil
-			       :family "Iosevka"
-			       :height 130)
-	   (set-face-attribute 'fixed-pitch nil
-			       :family "Iosevka"
-			       :height 130)
-	   (set-face-attribute 'variable-pitch nil
-			       :family "Source Serif Pro"
-			       :height 130)))))
-
-(defun text-scale-reset ()
-  "Reset the height of the default face."
-  (interactive)
-  (text-scale-set 0))
-
-(use-package faces
-  :ensure nil
-  :config
-  (hgf--set-font)
-  (general-def 'normal
-    "C-+" 'text-scale-increase
-    "C--" 'text-scale-decrease
-    "C-=" 'text-scale-reset))
+(add-to-list 'load-path (hgf-emacs-path "lisp"))
 #+end_src
 
-* Face modifications
-Some things aren't meant to be. Like variable sized fonts in my org files.
+** Custom file
 
 #+begin_src emacs-lisp
-(defun hgf-org-mode-hook ()
-  "Disable header variable font size."
-  (progn
-    (dolist (face '(org-level-1
-		    org-level-2
-		    org-level-3
-		    org-level-4
-		    org-level-5
-		    org-document-title))
-      (set-face-attribute face nil :weight 'normal :height 1.0)))
-  (set-face-attribute 'org-block nil :foreground nil))
-
-(add-hook 'org-mode-hook 'hgf-org-mode-hook)
-
-(defun hgf-outline-mode-hook ()
-  "Disable header variable font size."
-  (progn
-    (dolist (face '(outline-1
-		    outline-2
-		    outline-3
-		    outline-4
-		    outline-5
-		    outline-6
-		    outline-7
-		    outline-8))
-      (set-face-attribute face nil :weight 'semi-bold :height 1.0))))
+(setq custom-file (hgf-emacs-path "custom.el"))
+(load custom-file 'noerror)
 #+end_src
 
-* Modeline
+
+** Global auto-revert
+On the rare occasions when something changes outside of Emacs, I'd
+like Emacs to revert the buffer to the state on disk.
 
 #+begin_src emacs-lisp
+(global-auto-revert-mode 1)
+#+end_src
+
+** Show parens
+#+begin_src emacs-lisp
+(show-paren-mode 1)
+#+end_src
+
+** Immediately show parens
+#+begin_src emacs-lisp
+(setq show-paren-delay 0.0)
+#+end_src
+
+** Don't automatically add newlines at the end of files
+#+begin_src emacs-lisp
+(setq require-final-newline t)
+#+end_src
+
+** Quick y/n prompts
+#+begin_src emacs-lisp
+(fset 'yes-or-no-p 'y-or-n-p)
+#+end_src
+
+** Make scripts executable
+#+begin_src emacs-lisp
+(add-hook 'after-save-hook
+	'executable-make-buffer-file-executable-if-script-p)
+#+end_src
+
+** Bar as cursor
+#+begin_src emacs-lisp
+(setq-default cursor-type 'bar)
+#+end_src
+
+** No blinking cursor
+#+begin_src emacs-lisp
+(blink-cursor-mode 0)
+#+end_src
+
+** Ignore the mouse cursor position
+#+begin_src emacs-lisp
+(setq mouse-yank-at-point t)
+#+end_src
+
+** Follow symlinks
+Visit real files when looking at symlink under version control.
+
+#+begin_src emacs-lisp
+(setq vc-follow-symlinks t)
+#+end_src
+
+** Sentences don't end with two spaces
+#+begin_src emacs-lisp
+(setq sentence-end-double-space nil)
+#+end_src
+
+** Ask me before closing Emacs
+For the occasional annoying typo.
+
+#+begin_src emacs-lisp
+(setq confirm-kill-emacs 'y-or-n-p)
+#+end_src
+
+** No bell
+#+begin_src emacs-lisp
+(setq ring-bell-function 'ignore)
+#+end_src
+
+** Startup screen
+#+begin_src emacs-lisp
+(setq inhibit-startup-screen t
+    inhibit-startup-message t
+    initial-scratch-message nil)
+#+end_src
+
+** Backups
+#+begin_src emacs-lisp
+(setq backup-inhibited t
+      auto-save-default nil
+      make-backup-files nil)
+#+end_src
+
+** Scrolling
+#+begin_src emacs-lisp
+(setq scroll-margin 0
+      scroll-step 1
+      scroll-conservatively 10000
+      scroll-preserve-screen-position 1)
+#+end_src
+
+** Modeline
+I like a less cluttered modeline.
+
+#+begin_src emacs-lisp
+(defun my-modeline-modified ()
+  "Return buffer status: read-only (-), modified (·) or read-write ( )."
+  (let ((read-only buffer-read-only)
+	(modified  (and buffer-file-name (buffer-modified-p))))
+    (cond
+     (modified (propertize " ∙ " 'face 'bold))
+     (read-only " - ")
+     (t "   "))))
+
 (setq-default
  mode-line-format
  '(
    ""
+   (:eval (my-modeline-modified))
    ;; Buffer name
    "%b"
-   "  "
-   ;; Modified cookie
-   mode-line-modified
-   "  "
-   ;; Major mode
-   "%m"
    "  "
    ;; VC Branch
    (:eval (when-let (vc vc-mode)
 	    (propertize (substring vc 5)
-			'face 'fixed-pitch)))
-   pyvenv-mode-line-indicator))
+			'background nil)))))
 #+end_src
 
+* Configuring packages - =use-package=
+:PROPERTIES:
+:header-args: :noweb-ref package-use-package
+:END:
+I use =use-package= for packaging packages I use.
 
-* Evil
+** Add package archives
+Since we're using good ole =package= as a package manager, we have to add some
+package archives.
+
+#+begin_src emacs-lisp
+(require 'package)
+(add-to-list 'package-archives '("gnu" . "https://elpa.gnu.org/packages/") t)
+(add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
+(add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/") t)
+#+end_src
+
+** Ensure =use-package= is available
+If it's a fresh installation, =use-package= might not be installed.
+
+#+begin_src emacs-lisp
+(when (not (package-installed-p 'use-package))
+  (package-refresh-contents)
+  (package-install 'use-package))
+#+end_src
+
+** Configure =use-package=
+#+begin_src emacs-lisp
+(use-package use-package
+  :config
+  (setq use-package-always-ensure t))
+#+end_src
+
+* Keybindings - =general.el=
+:PROPERTIES:
+:header-args: :noweb-ref package-general
+:END:
+I use =general= for my keybindings. It's generally quite good. The keybindings
+themselves will be found throughout this file.
+
+#+begin_src emacs-lisp
+(use-package general
+  :config
+  (general-evil-setup)
+  (global-set-key [remap dabbrev-expand] 'hippie-expand))
+#+end_src
+
+I like using space as a leader key. C-c followed by a single letter is also used
+often enough to warrant a definer.
+
+#+begin_src emacs-lisp
+(general-create-definer hgf-leader-def
+  :keymaps '(normal visual)
+  :prefix "SPC")
+
+(general-create-definer hgf-c-def
+  :prefix "C-c")
+#+end_src
+
+And finally, set a few keybindings I want to have throughout Emacs.
+
+#+begin_src emacs-lisp
+(general-def
+  "C-s" 'save-buffer
+  "M-i" 'imenu)
+#+end_src
+
+* Vim keybindings - =evil=
+:PROPERTIES:
+:header-args: :noweb-ref package-evil
+:END:
 Vimmy keys and feel, for us vimfolk.
 
 #+begin_src emacs-lisp
@@ -283,12 +388,15 @@ Vimmy keys and feel, for us vimfolk.
     "C-k" 'kill-line
     "C-d" 'delete-char
     "C-y" 'yank))
+#+end_src
+
+And just a few more packages.
+
+#+begin_src emacs-lisp
 (use-package evil-collection
   :after evil
   :config
   (evil-collection-init))
-(use-package evil-magit)
-(use-package evil-numbers)
 (use-package evil-surround
   :config
   (global-evil-surround-mode 1))
@@ -311,107 +419,102 @@ Vimmy keys and feel, for us vimfolk.
 #+end_src
 
 ** C-i != TAB ∧ C-m != RET
-I mean, they used to be, but we aren't limited to real terminals anymore, are
-we?
+I mean, they used to be, but we aren't limited to archaic input methods anymore,
+are we?
+
+On second thought, I rather liked using C-m as Return.
 
 #+begin_src emacs-lisp
 (general-def input-decode-map [?\C-i] [C-i])
-(general-def input-decode-map [?\C-m] [C-m])
-
 (general-def 'normal "<C-i>" 'evil-jump-forward)
 (general-unbind evil-motion-state-map "TAB")
 #+end_src
 
-* LSP & Completion
+* Completion
+There are a few different kinds of completion. Ivy takes care of most
+Emacs commands and Company deals with completion within a buffer.
+
+** Ivy
+:PROPERTIES:
+:header-args: :noweb-ref package-ivy
+:END:
+I've been using Ivy for almost as long as I've been using Emacs and
+haven't really tried anything else. Never had a need to do so.
 
 #+begin_src emacs-lisp
-(use-package company
-  :config (global-company-mode 1))
+(use-package ivy
+  :config
+  (ivy-mode 1)
+  (setq ivy-use-virtual-buffers t
+	enable-recursive-minibuffers t
+	ivy-initial-inputs-alist nil
+	count-format "(%d/%d) "))
 #+end_src
 
+Ivy-rich also shows the documentation and keybinding for respective
+commands in Ivy windows, if applicable. Very nifty.
+
 #+begin_src emacs-lisp
-(use-package lsp-mode
-  :commands (lsp lsp-deferred)
-  :init (setq lsp-keymap-prefix "C-c l")
+(use-package ivy-rich
   :config
-  (setq gc-cons-threshold 200000000
-	read-process-output-max (* 1024 1024 10)
-	lsp-completion-provider :capf)
-  (lsp-enable-which-key-integration t)
-
-  (general-imap lsp-mode-map "C-x C-o" 'completion-at-point))
-
-(use-package lsp-ui
-  :commands lsp-ui-mode)
-
-(use-package lsp-ivy
-  :commands lsp-ivy-workspace-symbol)
-
-(use-package company-lsp
-  :config
-  (add-to-list 'company-lsp-filter-candidates '(digestif . nil)))
-
-(setq lsp-tex-server 'digestif)
-(setq lsp-clients-digestif-executable "/home/hgf/.luarocks/bin/digestif")
-(setq lsp-clients-texlab-executable "/home/hgf/.local/bin/texlab")
-
+  (ivy-rich-mode 1))
 #+end_src
 
-* Wrangle some defaults
+Counsel swaps out many common Emacs commands with their Ivy-nized
+versions.
+
 #+begin_src emacs-lisp
-(use-package emacs
+(use-package counsel
+  :config
+  (counsel-mode 1)
+  (use-package flx)
+  (use-package smex))
+#+end_src
+
+*** TODO =ivy-bibtex=
+
+#+begin_src emacs-lisp
+(use-package ivy-bibtex
+  :config
+  (setq ivy-re-builders-alist
+	'((ivy-bibtex . ivy--regex-ignore-order)
+	  (t . ivy--regex-plus)))
+  (setq ivy-bibtex-default-action 'ivy-bibtex-insert-citation)
+  (setq bibtex-completion-cite-default-command "autocite"
+	bibtex-completion-cite-prompt-for-optional-arguments nil
+	bibtex-completion-pdf-field "file")
+  (setq bibtex-completion-pdf-open-function
+	(lambda (fpath)
+	  (call-process "zathura" nil 0 nil fpath)))
+  (general-def "C-x [" 'ivy-bibtex))
+#+end_src
+
+** TODO Company
+* TODO Compile
+I mostly use compilation with Latex, surprisingly enough.
+
+#+begin_src emacs-lisp
+(defun hgf--close-compilation-if-successful (buf str)
+  "Close the compilation window if it is successful."
+  (if (null (string-match ".*exited abnormally.*" str))
+      ;;no errors, make the compilation window go away in a few seconds
+      (progn
+	(run-at-time
+	 "1 sec" nil 'kill-buffer
+	 (get-buffer-create "*compilation*"))
+	(message "No Compilation Errors!"))))
+
+(use-package compile
   :ensure nil
   :config
-  (global-auto-revert-mode 1)
-  (show-paren-mode 1)
-  (scroll-bar-mode 0)
-  (tool-bar-mode 0)
-  (menu-bar-mode 0)
-  (setq tab-bar-new-button-show nil
-	tab-bar-close-button-show nil)
-  (blink-cursor-mode 0)
-  (fringe-mode '(nil . nil))
-  (setq vc-follow-symlinks t
-	sentence-end-double-space nil
-	require-final-newline t
-	confirm-kill-emacs 'y-or-n-p
-	ring-bell-function 'ignore
-	mode-line-default-help-echo nil
-	show-paren-delay 0.0
-	mouse-yank-at-point t
-	default-input-method "TeX")
-  (fset 'yes-or-no-p 'y-or-n-p)
-  (add-hook 'after-save-hook
-	    'executable-make-buffer-file-executable-if-script-p)
-
-  (setq-default 
-		cursor-type 'bar))
+  (general-nmap "C-x c" 'recompile)
+  (add-hook 'compilation-finish-functions
+	    'hgf--close-compilation-if-successful))
 #+end_src
 
-** Startup
-#+begin_src emacs-lisp
-(use-package emacs
-  :config
-  (setq inhibit-startup-screen t
-	inhibit-startup-message t
-	initial-scratch-message nil
-	initial-major-mode 'org-mode))
-#+end_src
 
-** Backups
-#+begin_src emacs-lisp
-(setq backup-inhibited t
-      auto-save-default nil
-      make-backup-files nil)
-#+end_src
+* TODO Flycheck
 
-** Scrolling
-#+begin_src emacs-lisp
-(setq scroll-margin 0
-      scroll-step 1
-      scroll-conservatively 10000
-      scroll-preserve-screen-position 1)
-#+end_src
 
 * Interactive goodies
 Great guy, that Harry Schwartz. Most of these functions are directly copied from
@@ -438,6 +541,9 @@ his dotfiles.
 #+end_src
 
 * Org
+:PROPERTIES:
+:header-args: :noweb-ref package-org
+:END:
 Org is amazing and I use it all the time. And once again, a large majority of
 this section is inspired by Harry Schwartz.
 
@@ -452,6 +558,7 @@ this section is inspired by Harry Schwartz.
 All about them tasks.
 
 #+begin_src emacs-lisp
+(add-to-list 'org-modules 'habits)
 (defun org-capture-inbox ()
   (interactive)
   (condition-case nil
@@ -463,27 +570,21 @@ All about them tasks.
       org-clock-into-drawer nil
       org-log-done 'time)
 (setq org-refile-targets `((,(hgf-journal-path "projects.org") :maxlevel . 2)
-			   (,(hgf-journal-path "someday.org") :level . 1)
-			   (,(hgf-journal-path "tickler.org") :level . 1)
-			   (,(hgf-journal-path "inbox.org") :level . 0)
-			   (,(hgf-journal-path "fraunhofer.org") :maxlevel . 3)))
-(setq org-agenda-files
-      '(
-	"~/cloud/journal/projects.org"
-	"~/cloud/journal/inbox.org"
-	"~/cloud/journal/notes.org"
-	"~/cloud/journal/fraunhofer.org"
-	))
+			   (,(hgf-journal-path "fraunhofer/notes.org") :maxlevel . 2)))
 (setq org-archive-location "~/cloud/journal/archive.org::* %s")
 (setq org-capture-templates
       '(("n" "Note" entry (file "~/cloud/journal/notes.org")
 	 "*  %?\n")
 	("i" "Inbox" entry (file "~/cloud/journal/inbox.org")
 	 "* TODO %?\n")))
-(hgf-leader-def
-  "oc" 'org-capture
-  "oa" 'org-agenda
-  "oi" 'org-capture-inbox)
+(setq org-agenda-files
+      '(
+	"~/cloud/journal/inbox.org"
+	"~/cloud/journal/projects.org"
+	"~/cloud/journal/calendar.org"
+	"~/cloud/journal/habits.org"
+	"~/cloud/journal/fraunhofer/"
+	))
 #+end_src
 
 Alright, this function isn't exactly the cleanest possible thing in the world,
@@ -500,6 +601,25 @@ but it's useful enough for me (for now).
 						 (format "| %s | %s |" (car task) val)))))))))
 (general-nmap "C-c C-x C-r" 'org-generate-report)
 #+end_src
+
+Also, real nifty agendas.
+
+#+begin_src emacs-lisp
+(use-package org-super-agenda
+  :config
+  (setq org-super-agenda-groups
+	'(;; Group conds are ORed
+	  (:name "Fraunhofer"
+		 :tag "ipk")
+	  (:name "MSC Thesis"
+		 :tag "msc")
+	  (:name "Habits"
+		 :tag "habit")
+	  ))
+  (org-super-agenda-mode 1))
+#+end_src
+
+
 
 #+begin_src emacs-lisp
 (general-add-advice 'org-clock-in :after 'hgf-activate-current-task)
@@ -536,7 +656,7 @@ Ledger entries too, please
 
 ** Cosmetics
 I prefer my org-files non-indented. I also like to see the leading stars
-(otherwise there's a weird gap when things aren't indented.
+(otherwise there's a weird gap when things aren't indented).
 
 #+begin_src emacs-lisp
 (setq org-adapt-indentation nil
@@ -546,7 +666,10 @@ I prefer my org-files non-indented. I also like to see the leading stars
       org-fontify-done-headline nil)
 #+end_src
 
-I also prefer hiding the begin and end line of source blocks.
+I also prefer hiding the begin and end line of source blocks. I also
+find TODO keywords a tad annoying. Even though this hides these
+keywords throughout the files, I never actually write TODO or DONE in
+all-caps in normal text. Should I?
 
 #+begin_src emacs-lisp
 (add-hook
@@ -555,7 +678,27 @@ I also prefer hiding the begin and end line of source blocks.
    "Beautify Org Symbols"
    (push '("#+begin_src" . "λ") prettify-symbols-alist)
    (push '("#+end_src" . "~") prettify-symbols-alist)
+   (push '("TODO" . "?") prettify-symbols-alist)
+   (push '("DONE" . "!") prettify-symbols-alist)
    (prettify-symbols-mode)))
+#+end_src
+
+** Face modifications
+Some things aren't meant to be. Like variable sized fonts in my org files.
+
+#+begin_src emacs-lisp
+(defun hgf-org-mode-hook ()
+  "Disable header variable font size."
+  (progn
+    (dolist (face '(org-level-1
+		    org-level-2
+		    org-level-3
+		    org-level-4
+		    org-level-5
+		    org-document-title))
+      (set-face-attribute face nil :weight 'normal :height 1.0))))
+
+(add-hook 'org-mode-hook 'hgf-org-mode-hook)
 #+end_src
 
 ** Editing
@@ -617,6 +760,9 @@ I use org to write many of my latex files, including longer documents.
 * Major modes
 
 ** Vterm
+:PROPERTIES:
+:header-args: :noweb-ref package-vterm
+:END:
 Vterm is the nicest terminal emulator for Emacs I've found so far. But it needs
 module support, which requires building emacs with =--with-modules=.
 
@@ -787,10 +933,14 @@ For exploring new keys and remembering the lesser used ones.
     :docstring "Searchin' the wikis."))
 #+end_src
 
-
 * Magit
+:PROPERTIES:
+:header-args: :noweb-ref package-magit
+:END:
+
 #+begin_src emacs-lisp
 (use-package magit
+  :defer t
   :config
   (hgf-c-def "d" 'magit-list-repositories))
 #+end_src
@@ -835,10 +985,10 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
 (defun hgf-repolist-refresh ()
   "Hi."
   (setq magit-repository-directories
-	(~> "~/dev"
-	    (hgf-list-subdirs)
-	    (hgf-filter-git-repos)
-	    (hgf-make-magit-repolist))))
+	(pipe "~/dev"
+	      (hgf-list-subdirs)
+	      (hgf-filter-git-repos)
+	      (hgf-make-magit-repolist))))
 
 (advice-add 'magit-list-repositories :before #'hgf-repolist-refresh)
 
@@ -865,47 +1015,6 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
   (setq neo-theme 'arrow))
 #+end_src
 
-* Ivy
-
-#+begin_src emacs-lisp
-(use-package ivy
-  :config
-  (ivy-mode 1)
-  (setq ivy-use-virtual-buffers t
-	enable-recursive-minibuffers t
-	ivy-initial-inputs-alist nil
-	count-format "(%d/%d) "))
-
-(use-package counsel
-  :config
-  (counsel-mode 1)
-  (use-package flx)
-  (use-package smex))
-
-(use-package ivy-rich
-  :config
-  (ivy-rich-mode 1))
-
-#+end_src
-
-** =ivy-bibtex=
-
-#+begin_src emacs-lisp
-(use-package ivy-bibtex
-  :config
-  (setq ivy-re-builders-alist
-	'((ivy-bibtex . ivy--regex-ignore-order)
-	  (t . ivy--regex-plus)))
-  (setq ivy-bibtex-default-action 'ivy-bibtex-insert-citation)
-  (setq bibtex-completion-cite-default-command "autocite"
-	bibtex-completion-cite-prompt-for-optional-arguments nil
-	bibtex-completion-pdf-field "file")
-  (setq bibtex-completion-pdf-open-function
-	(lambda (fpath)
-	  (call-process "zathura" nil 0 nil fpath)))
-  (general-def "C-x [" 'ivy-bibtex))
-#+end_src
-
 * Projectile
 
 #+begin_src emacs-lisp
@@ -914,13 +1023,10 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
   (projectile-mode +1)
   (hgf-leader-def
     "p" 'projectile-command-map
-    "ff" 'projectile-find-file)
+    "f f" 'projectile-find-file)
   (setq projectile-completion-system 'ivy)
   (setq projectile-project-search-path
-	'("~/dev/uni"
-	  "~/dev/fraunhofer"
-	  "~/dev/ml"
-	  "~/dev/yaks")))
+	'("~/dev")))
 #+end_src
 
 Some additional utilities I mostly use with Projectile:
@@ -929,15 +1035,20 @@ Some additional utilities I mostly use with Projectile:
 #+end_src
 
 * Yasnippet
+:PROPERTIES:
+:header-args: :noweb-ref package-yasnippet
+:END:
 
 #+begin_src emacs-lisp
-(use-package yasnippet-snippets)
-(use-package yasnippet
-  :config
-  (setq yas-indent-line 'fixed))
-(yas-global-mode 1)
-#+end_src
+(use-package yasnippet-snippets
+  :defer t)
 
+(use-package yasnippet
+  :defer t
+  :config
+  (yas-global-mode 1)
+  (setq yas-indent-line 'fixed))
+#+end_src
 
 * Helpful
 
@@ -956,73 +1067,111 @@ Some additional utilities I mostly use with Projectile:
 	counsel-describe-variable-function 'helpful-variable))
 #+end_src
 
-
 * Hydra
-I'm not really using Hydra properly, except for the window management stuff that I seldom need to
-use.
+:PROPERTIES:
+:header-args: :noweb-ref package-hydra
+:END:
+I'm not really using Hydra properly, except for the window management
+stuff that I seldom need to use.
 
 #+begin_src emacs-lisp
 (use-package hydra
-  :config
-  (defhydra hydra-window ()
-    "Window management"
-    ("o" other-window "other")
-    ("h" evil-window-left "left")
-    ("j" evil-window-down "down")
-    ("k" evil-window-up "up")
-    ("l" evil-window-right "right")
-    ("s" evil-window-split "split")
-    ("v" evil-window-vsplit "vsplit")
-    ("q" evil-quit "quit")
-    ("f" find-file "file")
-    ("b" ivy-switch-buffer "buffer")
-    ("m" kill-this-buffer "murder")
-    ("1" delete-other-windows "highlander")
-    ("." nil "stop"))
-  (defhydra hydra-files (:exit t)
-    "Frequent files"
-    ("e" (find-file (hgf-emacs-path "configuration.org")) "config")
-    ("i" (find-file (hgf-journal-path "inbox.org")) "inbox")
-    ("p" (counsel-find-file "~/cloud/journal/projects") "projects")
-    ("f" (hydra-work/body) "fraunhofer")
-    ("n" (find-file (hgf-journal-path "notes.org")) "notes")
-    ("w" (find-file (hgf-journal-path "wiki.org")) "wiki")
-    ("c" (hydra-configs/body) "configs")
-    ("d" (find-file (hgf-journal-path "diet/diet.ledger")) "diet")
-    ("D" (find-file (hgf-journal-path "diet/food.ledger")) "food")
-    ("s" (hgf-generate-scratch-buffer) "scratch"))
-  (defhydra hydra-configs (:exit t)
-    "Configuration files"
-    ("i" (find-file "~/.config/i3/config") "i3")
-    ("g" (find-file "~/.config/git") "git")
-    ("k" (find-file "~/.config/kitty/kitty.conf") "kitty")
-    ("r" (find-file "~/.config/ranger/rc.conf") "ranger")
-    ("R" (find-file "~/.config/rofi/config") "Rofi")
-    ("e" (find-file (hgf-emacs-path "configuration.org")) "emacs")
-    ("f" (find-file "~/.config/fish/config.fish") "fish"))
-  (defhydra hydra-work (:exit t)
-    "Configuration files"
-    ("n" (find-file (hgf-journal-path "fraunhofer/notes.org")) "notes")
-    ("t" (find-file (hgf-journal-path "fraunhofer/working_hours.ledger")) "working hours")
-    ("p" (counsel-find-file (hgf-journal-path "fraunhofer/projects")) "projects"))
-  (defhydra hydra-package (:exit t)
-    "Package management"
-    ("r" (package-refresh-contents) "refresh")
-    ("i" (call-interactively #'package-install) "install")
-    ("u" (package-utils-upgrade-all) "upgrade")
-    ("d" (call-interactively #'package-delete) "delete"))
-  (hgf-leader-def
-    "P" 'hydra-package/body
-    "f" 'hydra-files/body
-    "w" 'hydra-window/body))
+  :defer t)
 #+end_src
 
-* Custom file
-
+** Org-mode
 #+begin_src emacs-lisp
-(setq custom-file (hgf-emacs-path "custom.el"))
-(load custom-file 'noerror)
+(defhydra hydra-org-mode (:exit t)
+  "Org mode"
+  ("c" org-capture "capture")
+  ("i" org-capture-inbox "inbox")
+  ("t" org-todo-list "todos")
+  ("a" org-agenda "agenda"))
 #+end_src
+
+** Windows
+#+begin_src emacs-lisp
+(defhydra hydra-window ()
+  "Window management"
+  ("o" other-window "other")
+  ("h" evil-window-left "left")
+  ("j" evil-window-down "down")
+  ("k" evil-window-up "up")
+  ("l" evil-window-right "right")
+  ("s" evil-window-split "split")
+  ("v" evil-window-vsplit "vsplit")
+  ("q" evil-quit "quit")
+  ("f" find-file "file")
+  ("b" ivy-switch-buffer "buffer")
+  ("m" kill-this-buffer "murder")
+  ("1" delete-other-windows "highlander")
+  ("." nil "stop"))
+#+end_src
+
+** Files
+#+begin_src emacs-lisp
+(defhydra hydra-files (:exit t)
+  "Frequent files"
+  ;; Configuration
+  ("c" (hydra-configs/body) "configs")
+  ("e" (find-file (hgf-emacs-path "configuration.org")) "config")
+  ;; Org
+  ("b" (find-file (hgf-journal-path "blog.org")) "blog")
+  ("d" (find-file (hgf-journal-path "diet/diet.ledger")) "diet")
+  ("D" (find-file (hgf-journal-path "diet/food.ledger")) "food")
+  ("m" (find-file (hgf-journal-path "calendar.org")) "calendar")
+  ("h" (find-file (hgf-journal-path "habits.org")) "habits")
+  ("i" (find-file (hgf-journal-path "inbox.org")) "inbox")
+  ("n" (find-file (hgf-journal-path "notes.org")) "notes")
+  ("p" (find-file (hgf-journal-path "projects.org")) "projects")
+  ("w" (find-file (hgf-journal-path "wiki.org")) "wiki")
+  ;; Work
+  ("f" (hydra-work/body) "fraunhofer")
+  ;; Scratch
+  ("s" (hgf-generate-scratch-buffer) "scratch"))
+#+end_src
+
+** Config files
+#+begin_src emacs-lisp
+(defhydra hydra-configs (:exit t)
+  "Configuration files"
+  ("i" (find-file "~/.config/i3/config") "i3")
+  ("g" (find-file "~/.config/git") "git")
+  ("k" (find-file "~/.config/kitty/kitty.conf") "kitty")
+  ("r" (find-file "~/.config/ranger/rc.conf") "ranger")
+  ("R" (find-file "~/.config/rofi/config") "Rofi")
+  ("e" (find-file (hgf-emacs-path "configuration.org")) "emacs")
+  ("f" (find-file "~/.config/fish/config.fish") "fish"))
+#+end_src
+
+** Work
+#+begin_src emacs-lisp
+(defhydra hydra-work (:exit t)
+  "Work related files"
+  ("n" (find-file (hgf-journal-path "fraunhofer/notes.org")) "notes")
+  ("t" (find-file (hgf-journal-path "fraunhofer/working_hours.ledger")) "working hours")
+  ("p" (counsel-find-file (hgf-journal-path "fraunhofer/projects")) "projects"))
+#+end_src
+
+** Packages
+#+begin_src emacs-lisp
+(defhydra hydra-package (:exit t)
+  "Package management"
+  ("r" (package-refresh-contents) "refresh")
+  ("i" (call-interactively #'package-install) "install")
+  ("u" (package-utils-upgrade-all) "upgrade")
+  ("d" (call-interactively #'package-delete) "delete"))
+#+end_src
+
+** Keybindings
+#+begin_src emacs-lisp
+(hgf-leader-def
+  "P" 'hydra-package/body
+  "f" 'hydra-files/body
+  "w" 'hydra-window/body
+  "o" 'hydra-org-mode/body)
+#+end_src
+
 
 * Theme
 
@@ -1051,31 +1200,10 @@ I am partial to Nord.
 		solarized-use-more-italic nil))
 #+end_src
 
-For setting transparency. I don't really use it, but it's there if I want to.
-#+begin_src emacs-lisp
-(defun transparency (value)
-  "Sets the transparency of the frame window. 0=transparent/100=opaque."
-  (interactive "nTransparency Value 0 - 100 opaque:")
-  (set-frame-parameter (selected-frame) 'alpha value))
-#+end_src
-
-** Some goodies
-
-#+begin_src emacs-lisp
-(use-package all-the-icons)
-#+end_src
-
-** Set theme
-
 Add some custom themes to the mix and make sure =rainbow-mode= is available.
 
 #+begin_src emacs-lisp
-(setq custom-theme-directory (hgf-emacs-path "themes/"))
-;; (add-to-list 'custom-theme-load-path (hgf-emacs-path "themes/"))
-(use-package rainbow-mode)
-#+end_src
 
-#+begin_src emacs-lisp
 (defun hgf-disable-all-themes ()
   (dolist (theme custom-enabled-themes)
     (disable-theme theme)))
@@ -1187,9 +1315,6 @@ Add some custom themes to the mix and make sure =rainbow-mode= is available.
 (add-hook 'prog-mode-hook 'outshine-mode)
 #+end_src
 
-
-
-
 ** Spell checking
 #+begin_src emacs-lisp
 #+end_src
@@ -1211,5 +1336,49 @@ I like auto-filling, 80 columns and spell-checking, thank you very much.
   (setq ispell-program-name "aspell"
 	ispell-extra-args '("--sug-mode=ultra"))
   (add-hook 'text-mode-hook 'flyspell-mode))
-  
+
 #+end_src
+
+* Tangled files
+
+** =early-init.el=
+
+#+begin_src emacs-lisp :noweb yes :tangle early-init.el :exports none
+<<early-init>>
+#+end_src
+
+** =init.el=
+
+#+begin_src emacs-lisp :noweb yes :tangle init.el :exports none
+(require 'package)
+(add-to-list 'package-archives '("gnu" . "https://elpa.gnu.org/packages/") t)
+(add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
+(add-to-list 'package-archives '("org" . "http://orgmode.org/elpa/") t)
+
+;; Ensure that use-package is installed.
+;;
+;; If use-package isn't already installed, it's extremely likely that this is a
+;; fresh installation! So we'll want to update the package repository and
+;; install use-package before loading the literate configuration.
+(when (not (package-installed-p 'use-package))
+  (package-refresh-contents)
+  (package-install 'use-package))
+
+<<config-prelude>>
+<<config-emacs-defaults>>
+<<package-use-package>>
+<<package-general>>
+<<config-identity>>
+<<package-evil>>
+<<package-org>>
+
+<<package-autothemer>>
+<<set-theme>>
+
+<<package-magit>>
+<<package-vterm>>
+<<package-ivy>>
+<<package-hydra>>
+<<package-yasnippet>>
+#+end_src
+
